--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Conversation Simulator</title>
+    <title>Gentleman's Chat Simulator</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --primary-blue: rgb(70, 122, 207);
+        }
+
         body {
             font-family: 'Roboto', sans-serif;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f0f2f5;
-            color: #1c1e21;
+            background-color: #f5f5f5;
+            color: #333;
             line-height: 1.6;
         }
 
         .container {
-            background-color: white;
-            padding: 20px;
+            background-color: #fff;
+            padding: 30px;
             border-radius: 15px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
-            color: #1877f2;
+            color: var(--primary-blue);
             text-align: center;
-            font-size: 2em;
-            margin-bottom: 20px;
+            font-size: 2.2em;
+            margin-bottom: 30px;
         }
 
         .login-container,
@@ -45,7 +49,7 @@
             display: block;
             margin-bottom: 8px;
             font-weight: 700;
-            color: #1877f2;
+            color: #34495e;
         }
 
         input[type="password"],
@@ -53,63 +57,86 @@
         select,
         textarea {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #dddfe2;
+            padding: 12px;
+            border: 1px solid #bdc3c7;
             border-radius: 6px;
             font-size: 14px;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+            transition: border-color 0.3s ease;
+        }
+
+        input[type="password"]:focus,
+        input[type="text"]:focus,
+        select:focus,
+        textarea:focus {
+            outline: none;
+            border-color: var(--primary-blue);
+        }
+
+        .button-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .main-container .button-container {
+            justify-content: space-between;
         }
 
         button {
-            display: inline-block;
-            width: 48%;
-            padding: 10px;
-            background-color: #1877f2;
+            padding: 12px 24px;
+            background-color: var(--primary-blue);
             color: white;
             border: none;
             border-radius: 6px;
             font-size: 16px;
             font-weight: 700;
             cursor: pointer;
-            transition: background-color 0.3s;
-            margin-right: 2%;
+            transition: background-color 0.3s, transform 0.1s;
         }
 
-        button:last-child {
-            margin-right: 0;
+        .main-container button {
+            flex-basis: 48%;
         }
 
         button:hover {
-            background-color: #166fe5;
+            background-color: rgb(56, 97, 165);
+            transform: translateY(-2px);
+        }
+
+        button:active {
+            transform: translateY(0);
         }
 
         #chatContainer {
             height: 400px;
             overflow-y: auto;
-            border: 1px solid #dddfe2;
+            border: 1px solid #bdc3c7;
             border-radius: 6px;
-            padding: 10px;
-            margin-bottom: 15px;
+            padding: 15px;
+            margin-bottom: 20px;
+            background-color: #ecf0f1;
         }
 
         .message {
             max-width: 70%;
-            margin-bottom: 10px;
-            padding: 10px;
+            margin-bottom: 15px;
+            padding: 12px;
             border-radius: 18px;
             line-height: 1.4;
         }
 
         .user-message {
-            background-color: #0084ff;
+            background-color: var(--primary-blue);
             color: white;
             align-self: flex-end;
             margin-left: auto;
         }
 
         .ai-message {
-            background-color: #f0f0f0;
-            color: #1c1e21;
+            background-color: #fff;
+            color: #333;
+            border: 1px solid #bdc3c7;
         }
 
         .loading {
@@ -122,8 +149,8 @@
             display: inline-block;
             width: 20px;
             height: 20px;
-            border: 3px solid #dddfe2;
-            border-top: 3px solid #1877f2;
+            border: 3px solid #bdc3c7;
+            border-top: 3px solid var(--primary-blue);
             border-radius: 50%;
             animation: spin 1s linear infinite;
         }
@@ -138,18 +165,20 @@
 <body>
     <div class="container">
         <div class="login-container active">
-            <h1>Conversation Simulator</h1>
+            <h1>Gentleman's Chat Simulator</h1>
             <div>
                 <label for="password">Enter Password:</label>
                 <input type="password" id="password" name="password">
             </div>
-            <button id="login">Login</button>
+            <div class="button-container">
+                <button id="login">Login</button>
+            </div>
         </div>
 
         <div class="main-container">
-            <h1>Conversation Simulator</h1>
+            <h1>Gentleman's Chat Simulator</h1>
             <div>
-                <label for="modelSelect">Select Conversation Partner:</label>
+                <label for="modelSelect">Who are you messaging as?</label>
                 <select id="modelSelect">
                     <option value="Sebastian Loredo">Sebastian Loredo</option>
                     <option value="Schuyler Van Tassel">Schuyler Van Tassel</option>
@@ -168,13 +197,16 @@
             <div>
                 <textarea id="userInput" rows="3" placeholder="Type your message here..."></textarea>
             </div>
-            <button id="sendMessage">Send Message</button>
-            <button id="otherReply">Other Reply</button>
+            <div class="button-container">
+                <button id="otherReply">Other Reply</button>
+                <button id="sendMessage">Send Message</button>
+            </div>
             <div id="loading" class="loading" style="display: none;"></div>
         </div>
     </div>
 
     <script>
+        // The JavaScript remains the same as in the previous version
         let lastAiMessage = '';
 
         document.getElementById('login').addEventListener('click', function () {
