--- a/public/index.html
+++ b/public/index.html
@@ -75,12 +75,8 @@
 
         .button-container {
             display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .main-container .button-container {
             justify-content: space-between;
+            margin-top: 20px;
         }
 
         button {
@@ -95,8 +91,8 @@
             transition: background-color 0.3s, transform 0.1s;
         }
 
-        .main-container button {
-            flex-basis: 48%;
+        .main-container .button-container button {
+            flex-basis: 30%;
         }
 
         button:hover {
@@ -106,6 +102,14 @@
 
         button:active {
             transform: translateY(0);
+        }
+
+        #clearChat {
+            background-color: #e74c3c;
+        }
+
+        #clearChat:hover {
+            background-color: #c0392b;
         }
 
         #chatContainer {
@@ -198,6 +202,7 @@
                 <textarea id="userInput" rows="3" placeholder="Type your message here..."></textarea>
             </div>
             <div class="button-container">
+                <button id="clearChat">Clear Chat</button>
                 <button id="otherReply">Other Reply</button>
                 <button id="sendMessage">Send Message</button>
             </div>
@@ -206,7 +211,6 @@
     </div>
 
     <script>
-        // The JavaScript remains the same as in the previous version
         let lastAiMessage = '';
 
         document.getElementById('login').addEventListener('click', function () {
@@ -282,8 +286,15 @@
             }
         }
 
+        function clearChat() {
+            const chatContainer = document.getElementById('chatContainer');
+            chatContainer.innerHTML = '';
+            lastAiMessage = '';
+        }
+
         document.getElementById('sendMessage').addEventListener('click', () => sendMessage(false));
         document.getElementById('otherReply').addEventListener('click', () => sendMessage(true));
+        document.getElementById('clearChat').addEventListener('click', clearChat);
     </script>
 </body>
 
