--- a/public/index.html
+++ b/public/index.html
@@ -195,6 +195,7 @@
                 <label for="modelSelect">Who are you messaging as?</label>
                 <select id="modelSelect">
                     <option value="Sebastian Loredo">Sebastian Loredo</option>
+                    <option value="Justin Diamond">Justin Diamond</option>
                     <option value="Schuyler Van Tassel">Schuyler Van Tassel</option>
                     <option value="Nick Kitevski">Nick Kitevski</option>
                     <option value="Lizzie Cepeda">Lizzie Cepeda</option>
